# Advanced-Tic-Tac-Toe

./: Advanced-Tic-Tac-Toe.pro  Advanced-Tic-Tac-Toe.pro.user.0830de6  Advanced-Tic-Tac-Toe.pro.user.fbdecfe  CMakeLists.txt  Performance.docx  README.md  display.cpp  display.h  display.ui  easy.h  gamecore.cpp  gamecore.h  gamecore.ui  gameover.h  history.cpp  history.h  history.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageBox.cpp  mode_selector.cpp  mode_selector.h  mode_selector.ui  pvai.cpp  pvai.h  pvai.ui  pvp.cpp  pvp.h  pvp.ui  sh.exe.stackdump  signup.cpp  signup.h  signup.ui  widget.cpp  widget.h  widget.ui
.exe game files/: TicTacToe_Project.db
.github/workflows/: CD.yml  azure-static-web-apps-green-beach-03e696210.yml  build.yml  cd.yml  ci.yml  ci2.yml  ci_linux.yml  continuous deployment.yml
GUI_Tic_Tac_Toe/: Advanced-Tic-Tac-Toe.pro  Resources.qrc  display.cpp  display.h  display.ui  history.cpp  history.h  history.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messageBox.h  mode_selector.cpp  mode_selector.ui  performance.cpp  performance.h  pvai.cpp  pvai.h  pvai.ui  pvp.cpp  pvp.h  signup.cpp  signup.h  signup.ui
NoGUI_Tic_Tac_Toe/: CMakeLists.txt  computer_turn_easy.h  computer_turn_hard.h  computer_turn_medium.h  create_board.h  display_board.h  gameover.h  global_variables.h  main.cpp  player_mod_2_turn.h  players_mod_turn.h
SqLite/: TicTacToe_Project.db  TicTacToe_Project.sqbpro
doc/: Performance.docx  SDS.docx  SRS.docx  Testing Document.docx
tests/: CMakeLists.txt  test_tic_tac_toe.cpp  test_tic_tac_toe.h
(+2 files in other folders)
